# draco_encode_cpp

./: Buggy.gltf  CMakeLists.txt  FilePLYCustom.h  README.md  TestVisualizer.cpp  bun_zipper1.ply  bunny.ply  bunny_.ply  client.cpp  custom0_open3d.ply  dracoFile.csv  encode.cpp  example2.drc  example2_.mtl  open3dFile.csv  plyEncoderCustom.cpp  plyEncoderCustom.h  rplyCustom.cpp  rplyCustom.h  rplyCustomOld.cpp  rplyCustomOld.h  server.cpp  tags  test.cpp  utils.h
client/: test_thread0.ply  test_thread3.ply
draco/src/draco/io/: obj_decoder.cc
open3d/: bunny.ply
reference/: bun_zipperOpen3d.ply
tmp/: stdio_file_writerCustom.cpp  stdio_file_writerCustom.h
